summative.moria.Moria.scala.error
Erreur de compilation :
Moria:1: error: Missing closing brace `}' assumed here
do{
^Moria:18: error: ';' expected but '{' found.
}while (getCouleurSol()!=Color.green){
                                     ^